fix: overflow of inline-code on chromium/safari

--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -142,6 +142,7 @@ blockquote {
   margin: 0;
   font-size: 0.85em;
   border-radius: 3px;
+  overflow-wrap: break-word;
 }
 
 a > code {
